--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <html>
 <head>
 	<title>WERA-When in Rome</title>
-	<meta name="viewport" content="initial-scale=1.0">
-    <meta charset="utf-8">
-	<link rel="stylesheet" href="styles.css">
-	<script src="vendors/jquery-3.2.1.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFaiEEG2QEhSIVYl9mkd2CBI8LLoyYjQg&callback=initMap"
+	<meta name='viewport' content='initial-scale=1.0'>
+    <meta charset='utf-8'>
+	<link rel='stylesheet' href='styles.css'>
+	<script src='vendors/jquery-3.2.1.min.js'></script>
+	<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAFaiEEG2QEhSIVYl9mkd2CBI8LLoyYjQg&callback=initMap'
     async defer></script>
-    
-	<script src="app.js"></script>
+	<script src='app.js'></script>
 </head>
 <body>
-<div id="map"></div>
+<div id='map'></div>
 </body>
 </html>
 
