--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset='utf-8'>
 	<link rel='stylesheet' href='styles.css'>
 	<script src='vendors/jquery-3.2.1.min.js'></script>
+	<script src='vendors/handlebars-v4.0.10.js'></script>
 	<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAFaiEEG2QEhSIVYl9mkd2CBI8LLoyYjQg&callback=initMap'
     async defer></script>
 	<script src='app.js'></script>
