--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	
 		<script src='vendors/jquery-3.2.1.min.js'></script>
 		<script src='vendors/handlebars-v4.0.10.js'></script>
-		<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAFaiEEG2QEhSIVYl9mkd2CBI8LLoyYjQg&callback=initMap'
-		async defer></script>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXicmfnWQzHSm3iOcJBe6HxoYwaYvwKHI&libraries=places"></script>
+
+		
 		<script src='app.js'></script>
 	</head>
 	<body>
